--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-
+    <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
+    <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
+  
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
+</script>
     <style>
         .btn-circle {
             width: 70px;
@@ -22,12 +26,14 @@
         }
 
         body {
-            color: #011627
+            color: #011627;
+            background: pink;
+
         }
 
         .componentColor {
             background-color: #e71d36;
-        }
+         }
 
         .componentBorder {
             border-style: solid;
@@ -77,6 +83,7 @@
 </head>
 
 <body>
+    <script src="sketch.js"></script>
 
     <div class="container-fluid">
         <div class="row">
@@ -87,30 +94,28 @@
         <div class="row">
             <div class="col-sm-3">
                 <div class="container-fluid componentBorder">
-                    <div class="row">
-                        <div class="col-sm-2"></div>
-                        <div class="col-sm-4"><button type="button" class="btn btn-circle componentColor"><i
-                                    class="glyphicon glyphicon-repeat" style="color: #011627;"></i>
+                    <div class="row justify-content-center">
+                        <div class="col-sm-3"><button type="button" class="btn btn-circle componentColor"><i
+                                    class="glyphicon glyphicon-repeat" style="color: #ffffff;"></i>
                             </button></div>
 
-                        <div class="col-sm-4">
+                        <div class="col-sm-3">
                             <button type="button" class="btn btn-circle componentColor"><i
-                                    class="glyphicon glyphicon-play" style="color: #011627;"></i>
+                                    class="glyphicon glyphicon-play" style="color: #ffffff;"></i>
                             </button>
                         </div>
-                        <div class="col-sm-2"></div>
-                    </div>
+                     </div>
 
                     <div class="row mt-4">
                         <div class="col-sm-6">Data colors</div>
                         <div class="col-sm-6">
                             <div class="dropdown">
                                 <button class="btn dropdown-toggle componentColor" id="dataColorBtn" type="button"
-                                    data-toggle="dropdown" style="color: #011627;">Color
+                                    data-toggle="dropdown" style="color: #ffffff;">Color
                                 </button>
                                 <ul class="dropdown-menu" id="allColors">
                                     <li><a href="#" value="#e71d36" class="colorOption"
-                                            style="background-color:#e71d36">. </a></li>
+                                            style="background-color:#e71d36">.</a></li>
                                     <li><a href="#" value="#ff9f1c" class="colorOption"
                                             style="background-color:#ff9f1c">. </a></li>
                                     <li><a href="#" value="#2ec4b6" class="colorOption"
@@ -158,10 +163,12 @@
             <div class="col-sm-5">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-sm-4" style="background-color:aqua;">as</div>
+                        <div id="sketch-container"></div>
+
+                      <!--  <div class="col-sm-4" style="background-color:aqua;">as</div>
                         <div class="col-sm-4" style="background-color: black;">sdfs</div>
                         <div class="col-sm-4" style="background-color: blue;">fsdf</div>
-                    </div>
+                  -->  </div>
                 </div>
             </div>
             <div class="col-sm-4">
