--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         <div class="col-sm-6 slidecontainer">
                             <input type="range" min="0.005" max="1" value="0.2" step="0.005" class="slider"
                                 id="learningRateRange"
-                                oninput="updateValue('learningRateRange','learningRateValueDis')">
+                                oninput="updateValue('learningRateRange','learningRateValueDis'); setLearningRate(value);">
                         </div>
                     </div>
                     <div class="row mt-4">
@@ -227,10 +227,15 @@
             // console.log($(this).css("background-color")) 
             var chosenFun = $(this).text();
             $('#chosenActivationFun').text(chosenFun);
+            setActivationFun(chosenFun);
         });
     });
 
     setColor($('#allColors li a').css("background-color"));
+    setActivationFun('Tanh');
+    setLearningRate(0.2);
+    setRatioOfTrainingData(70);
+    setIterationNumber(70);
     updateValue('learningRateRange', 'learningRateValueDis');
     updateValue('traningDataRange', 'traningDataValueDis');
     updateValue('iterationRange', 'iterationValueDis');
