--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                             </button></div>
 
                         <div class="col-sm-3">
-                            <button type="button" class="btn btn-circle componentColor"><i
-                                    class="glyphicon glyphicon-play" style="color: #ffffff;"></i>
+                            <button type="button" class="btn btn-circle componentColor" onclick="train()" ><i
+                                    class="glyphicon glyphicon-play"  style="color: #ffffff;"></i>
                             </button>
                         </div>
                     </div>
@@ -161,18 +161,18 @@
                     <div class="row mt-4">
                         <div class="col-sm-6">Ratio of traning data <span id="traningDataValueDis"></span>%</div>
                         <div class="col-sm-6"><input type="range" min="40" max="90" value="70" step="5" class="slider"
-                                id="traningDataRange" oninput="updateValue('traningDataRange','traningDataValueDis')">
+                                id="traningDataRange" oninput="updateValue('traningDataRange','traningDataValueDis'); setRatioOfTrainingData(value); ">
                         </div>
                     </div>
                     <div class="row mt-4">
                         <div class="col-sm-6">Max # of iteration <span id="iterationValueDis"></span></div>
                         <div class="col-sm-6"><input type="range" min="1" max="1000" value="70" step="1" class="slider"
-                                id="iterationRange" oninput="updateValue('iterationRange','iterationValueDis')"></div>
+                                id="iterationRange" oninput="updateValue('iterationRange','iterationValueDis'); setIterationNumber(value); "></div>
                     </div>
                     <div class="row mt-4">
                         <div class="col-sm-6">SSE <span id="SSEValueDis"></span></div>
                         <div class="col-sm-6"><input type="range" min="0.001" max="0.8" value="0.01" step="0.001"
-                                class="slider" id="SSERange" oninput="updateValue('SSERange','SSEValueDis')"></div>
+                                class="slider" id="SSERange" oninput="updateValue('SSERange','SSEValueDis'); setSSE(value);"></div>
                     </div>
                 </div>
             </div>
@@ -230,12 +230,13 @@
             setActivationFun(chosenFun);
         });
     });
-
+    
     setColor($('#allColors li a').css("background-color"));
     setActivationFun('Tanh');
     setLearningRate(0.2);
     setRatioOfTrainingData(70);
     setIterationNumber(70);
+    setSSE(0.01);
     updateValue('learningRateRange', 'learningRateValueDis');
     updateValue('traningDataRange', 'traningDataValueDis');
     updateValue('iterationRange', 'iterationValueDis');
@@ -248,7 +249,7 @@
         x: [0, 1, 2, 3, 10, 5, 6, 7, 8],
         y: [8, 7, 6, 1, 4, 3, 2, 1, 0],
         type: 'scatter',
-        name: 'validation',
+        name: 'Validation',
 
         fill: 'tozeroy',
     };
