--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="col-sm-3">
                 <div class="container-fluid componentBorder">
                     <div class="row justify-content-center">
-                        <div class="col-sm-3"><button type="button" class="btn btn-circle componentColor"><i
+                        <div class="col-sm-3"><button type="button" class="btn btn-circle componentColor" onclick="window.location.reload()"><i
                                     class="glyphicon glyphicon-repeat" style="color: #ffffff;"></i>
                             </button></div>
 
@@ -126,10 +126,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row mt-4">
-                        <div class="col-sm-6">Examples</div>
-                        <div class="col-sm-6"></div>
-                    </div>
+                 
                     <div class="row mt-4">
                         <div class="col-sm-6">Activation function</div>
                         <div class="col-sm-6">
@@ -164,7 +161,7 @@
                     </div>
                     <div class="row mt-4">
                         <div class="col-sm-6">Max # of iteration <span id="iterationValueDis"></span></div>
-                        <div class="col-sm-6"><input type="range" min="1" max="100000" value="1000" step="1"
+                        <div class="col-sm-6"><input type="range" min="1" max="10000" value="1000" step="1"
                                 class="slider" id="iterationRange"
                                 oninput="updateValue('iterationRange','iterationValueDis'); setIterationNumber(value); ">
                         </div>
@@ -213,7 +210,7 @@
             <div class="col-sm-5"></div>
         </div>
         <div class="row">
-            <div class="col-sm-2" style="font-size: 16px;">Test Mode </div>
+            <div class="col-sm-2" id="modeDiv" style="font-size: 16px;">Traning Mode </div>
             <div class="col-sm-5" id="testMode" style="font-size: 16px;"></div>
             <div class="col-sm-5"></div>
         </div>
